src/test/compile-fail/do1.rs
fn main() {
    let x = do y; //~ ERROR: expecting '{' but found
}
